--- a/MyApplication/app/src/main/res/layout/activity_order.xml
+++ b/MyApplication/app/src/main/res/layout/activity_order.xml
@@ -4,7 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrderActivity">
+    tools:context=".OrderActivity"
+    android:id="@+id/orderView">
+
+    <ProgressBar
+        android:id="@+id/order_progressbar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:backgroundTint="#00FFFFFF"
+        android:indeterminate="true"
+        android:indeterminateTint="#1a09d6"
+        android:max="100"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/orderItemListView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ListView
         android:id="@+id/orderItemListView"
