--- a/MyApplication/app/src/main/res/layout/fragment_cart.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_cart.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/fragmentCart">
 
     <include layout="@layout/content_cart"
         android:id="@+id/cart_content"
