Implement member previous order list with adding to cart

--- a/MyApplication/app/src/main/res/layout/activity_add_item.xml
+++ b/MyApplication/app/src/main/res/layout/activity_add_item.xml
@@ -59,7 +59,7 @@
 
     <TextView
         android:id="@+id/itemTitle"
-        android:layout_width="408dp"
+        android:layout_width="match_parent"
         android:layout_height="96dp"
         android:background="@drawable/top_title"
         android:gravity="center_vertical"
