--- a/MyApplication/app/src/main/res/layout/fragment_member.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_member.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/memberSeparator2"
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="#00BCD4"
@@ -16,7 +16,6 @@
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/memberConstraint"
-        app:layout_constraintBottom_toTopOf="@+id/member_progressbar"
         app:layout_constraintVertical_bias="0.0"/>
 
     <ListView
@@ -24,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/member_progressbar"
+        app:layout_constraintTop_toBottomOf="@+id/memberSeparator2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.0"></ListView>
 
@@ -40,7 +39,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/memberSeparator2"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
