--- a/MyApplication/app/src/main/res/layout/fragment_member.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_member.xml
@@ -39,14 +39,13 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/memberConstraint"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/member_progressbar">
 
         <TextView
             android:id="@+id/memberSeparator1"
