--- a/MyApplication/app/src/main/res/layout/listrow_menuitem.xml
+++ b/MyApplication/app/src/main/res/layout/listrow_menuitem.xml
@@ -25,7 +25,7 @@
     <TextView
         android:id="@+id/menuItemDescription"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_below="@id/menuItemName"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
